# jons-mcp-reminders

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
spec/: reminders-mcp-spec.md
src/: __init__.py
src/jons_mcp_reminders/: __init__.py  constants.py  converters.py  exceptions.py  models.py  server.py  store.py  utils.py
src/jons_mcp_reminders/tools/: __init__.py  batch.py  lists.py  reminders.py  search.py
tests/: __init__.py  conftest.py  test_integration.py
